<resources>
    <string name="app_name">My Share</string>
    <string name="app_label">My Share</string>
    <!--<string name="title_activity_main">MainActivity</string>-->

    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>

    <!-- button -->
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add_expense">Add Expense</string>
    <string name="calculate_shares">Calculate All Shares</string>

    <!-- for add people activity -->
    <string name="add_people_dialog_title">Add people</string>
    <string name="add_people_button_name">Start by adding people you want to split an expense with!</string>
    <string name="add_more_people_button_name">Add more people</string>

    <!-- next step -->
    <string name="next_step">Done</string>
    <string name="persist_text">Save</string>

    <!-- for add expense activity -->
    <string name="add_expense_dialog_title">Add Expense</string>
    <string name="people_who_purchased">Names of people involved in expense</string>
    <string name="expense_name">Expense Name</string>
    <string name="amount_before_tax">Amount (before tax)</string>
    <string name="shared_checkbox_label">or split between everyone (overrides individual names)</string>
    <string name="saved_names_reminder">Names you have entered have been saved. They will show as options when you add expenses.</string>
    <string name="add_expense_reminder">Looks like you haven\'t added expenses yet. Use the Add Expense button to start.</string>

    <!-- for cumulative totals activity -->
    <string name="cumul_totals_intro">You\'re almost there! Enter your tax and tip amounts.
        The subtotal amount has already been filled in for you from your previous expense inputs.
    \n\n Note: if you do not provide a tip and tax amount, they default to zero.</string>
    <string name="cumul_subtotal_hint">Subtotal</string>
    <string name="cumul_tax_hint">Tax (Amount)</string>
    <string name="cumul_tip_hint">Tip (%)</string>
    <string name="cumul_totals_next_button_text">Next</string>

    <!-- ETC -->
    <string name="test_string">TEST</string>

    <!-- Header strings -->
    <string name="add_people_header">Add People</string>
    <string name="add_expenses_header">Add Expenses</string>
    <string name="review_shares_header">Review</string>

    <!-- Save shares -->
    <string name="prompt_identifier_share">Name</string>
    <string name="save_share_name_description">Last step! Please provide a unique identifier for this group of expenses.</string>
    <string name="title_activity_view_historical_shares">ViewHistoricalSharesActivity</string>

</resources>
