<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/people_who_purchased" />

    <EditText
        android:id="@+id/expense_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expense_name"/>

    <EditText
        android:id="@+id/expense_amount_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_before_tax"/>


</LinearLayout>